# aimd-setup-tool

./: .gitignore  .pre-commit-config.yaml  README  README.md  adjust_input_files.py  aimd-setup.py  aimd-setup.sh  argparser.py  environment.yaml  pyproject.toml  requirements.txt  routines.py  setup.cfg
cp2k/: eq.inp  geoopt.inp  prod.inp  relax.inp  run_cp2k_hedy.sh
data/: GTH_POTENTIALS
execute/: run-cp2k-aimd-hedy.sh  run-cp2k-aimd-iris.sh  run-cp2k-aimd-noctua2.sh  run-cp2k-bqb-hedy.sh  run-cp2k-bqb-iris.sh  run-cp2k-bqb-noctua2.sh  run-cp2k-iris.sh  run-cp2k-noctua2.sh  run_cp2k_hedy.sh  run_cp2k_iris.sh
input/: bqb.inp  eq.inp  geoopt.inp  prod.inp  relax.inp  single-point.inp
src/aimd_setup/: __init__.py  __version__.py
src/aimd_setup/adjust_input/: __init__.py  adjust_input_files.py
src/aimd_setup/argparser/: argparser.py
src/aimd_setup/cli/: entrypoint.py
src/aimd_setup/cp2k-datafiles/: BASIS_MOLOPT  GTH_POTENTIALS
src/aimd_setup/cp2k-input/: bqb.inp  energy.inp  eq.inp  geoopt.inp  prod.inp  relax.inp
src/aimd_setup/functions/: __init__.py  useful_funcs.py
src/aimd_setup/runscripts/: run-cp2k-aimd-hedy.sh  run-cp2k-aimd-iris.sh  run-cp2k-aimd-noctua2.sh  run-cp2k-berta2.sh  run-cp2k-bonna.sh  run-cp2k-bonna_old copy.sh  run-cp2k-bqb-hedy.sh  run-cp2k-bqb-iris.sh  run-cp2k-bqb-noctua2.sh  run-cp2k-energy-noctua2.sh  run-cp2k-hedy2.sh  run-cp2k-iris2.sh  run-cp2k-marvin.sh  run-cp2k-noctua2.sh
src/aimd_setup/setup/: __init__.py  setup.py
src/aimd_setup/snippets/: __init__.py  build_input.py
src/aimd_setup/snippets/force_eval/: header.inp  (+1 more)
(+99 files in other folders)
