[metadata]
name = aimd_setup
version = attr: aimd_setup.__version__
long_description = file: README.md
long_description_content_type = text/markdown
author = "Tom Frömbgen"
license = MIT
license_files =
    LICENSE
    LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    aimd_setup = aimd_setup:console_entry_point

[options.extras_require]
dev =
    black
    covdefaults
    coverage
    pre-commit
    pylint
    pytest
    tox

[options.package_data]
aimd_setup =
    cp2k-datafiles/*
    runscripts/*
    snippets/**/*
